--- a/Lost.html
+++ b/Lost.html
@@ -2,30 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>BlockPlacer</title>
+    <title>Lost</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
-
 </head>
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="">Trinkets</a>
+                <a class="navbar-brand" href="#">Trinkets</a>
             </div>
             <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">Blocks</a></li>
-                <li><a href="Lost.html">Lost</a></li>
+                <li><a href="index.html">Blocks</a></li>
+                <li class="active"><a href="Lost.html">Lost</a></li>
             </ul>
         </div>
     </nav>
-    <div id="mainContent" class = "contentSheet">
-        <h2 class = "mainTitle">Block Placer!</h2>
-        <hr class = "line">
-    </div>
 </body>
-
-<footer>
-    <script src="BlockPlacer.js"></script>
-</footer>
-</html>
+</html>p
