--- a/Lost.html
+++ b/Lost.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Lost</title>
+    <script src="bootstrap-slider.js"></script>
+    <script src="p5.min.js"></script>
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-slider.css">
 </head>
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -18,5 +22,34 @@
             </ul>
         </div>
     </nav>
+
+    <div id="mainContent" class = "contentSheet">
+        <h2 class = "mainTitle">Maze Generator!</h2>
+        <hr class = "line">
+        <div id="inputBundle" class = "inputBundle">
+
+            <div class="trinketSlider">
+                <p class = "sliderTitle">Select Width:</p>
+                <div class = "sliderHouse"><input id="widthSlider" class = "standardSlider" data-slider-id='ex1Slider' type="text" data-slider-min="5" data-slider-max="30" data-slider-step="1" data-slider-value="10"/>
+                </div>
+            </div>
+            <div class="trinketSlider">
+                <p class = "sliderTitle">Select Height:</p>
+                <div class = "sliderHouse"><input id="heightSlider" class = "standardSlider" data-slider-id='ex1Slider' type="text" data-slider-min="5" data-slider-max="30" data-slider-step="1" data-slider-value="10"/>
+                </div>
+            </div>
+            <hr class = "line">
+            <div class="trinketSlider">
+                <p class = "sliderTitle">Select Speed:</p>
+                <div class = "sliderHouse"><input id="speedSlider" class = "standardSlider" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="80" data-slider-step="1" data-slider-value="10"/>
+                </div>
+            </div>
+        </div>
+        <div id="mazeBox"></div>
+    </div>
+
 </body>
-</html>p
+<footer>
+    <script src="MazeGenerator.js"></script>
+</footer>
+</html>
