--- a/index.html
+++ b/index.html
@@ -3,26 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <title>BlockPlacer</title>
+    <script src="bootstrap-slider.js"></script>
+    <script src="p5.min.js"></script>
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-slider.css">
 
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="">Trinkets</a>
-            </div>
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">Blocks</a></li>
-                <li><a href="Lost.html">Lost</a></li>
-            </ul>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="">Trinkets</a>
         </div>
-    </nav>
-    <div id="mainContent" class = "contentSheet">
-        <h2 class = "mainTitle">Block Placer!</h2>
-        <hr class = "line">
+        <ul class="nav navbar-nav">
+            <li class="active"><a href="index.html">Blocks</a></li>
+            <li><a href="Lost.html">Lost</a></li>
+        </ul>
     </div>
+</nav>
+<div id="mainContent" class = "contentSheet">
+    <h2 class = "mainTitle">Block Placer!</h2>
+    <hr class = "line">
+    <div id="inputBundle" class = "inputBundle">
+        <div class="gridItem">
+                    <h4 class ="subTitle">The dimensions of the <b>box</b> you want to fill</h4>
+                    <div class="trinketSlider">
+                        <p class = "sliderTitle">Select Width:</p>
+                        <div class = "sliderHouse"><input id="widthSlider" class = "standardSlider" data-slider-id='ex1Slider' type="text" data-slider-min="2" data-slider-max="15" data-slider-step="1" data-slider-value="3"/>
+                        </div>
+                    </div>
+                    <div class="trinketSlider">
+                        <p class = "sliderTitle">Select Height:</p>
+                        <div class = "sliderHouse"><input id="heightSlider" class = "standardSlider" data-slider-id='ex1Slider' type="text" data-slider-min="2" data-slider-max="15" data-slider-step="1" data-slider-value="4"/>
+                        </div>
+                    </div>
+        </div>
+        <div class="gridItem">
+                    <h4 class ="subTitle">Add <b>blocks</b> to fill the <b>box</b></h4>
+                    <div class="trinketSlider">
+                        <p class = "sliderTitle">Select Width:</p>
+                        <div class = "sliderHouse"><input id="blockWidthSlider" class = "standardSlider" data-slider-id='ex1Slider' type="text" data-slider-min="2" data-slider-max="5" data-slider-step="1" data-slider-value="2"/>
+                        </div>
+                    </div>
+                    <div class="trinketSlider">
+                        <p class = "sliderTitle">Select Height:</p>
+                        <div class = "sliderHouse"><input id="blockHeightSlider" class = "standardSlider" data-slider-id='ex1Slider' type="text" data-slider-min="2" data-slider-max="5" data-slider-step="1" data-slider-value="3"/>
+                        </div>
+                    </div>
+                    <div class="row text-center">
+                        <button type="button" class="btn btn-success" onclick="addBlock()">Add Block</button>
+                        <button type="button" class="btn btn-danger" onclick="clearBlocks()">Clear ALL Blocks</button>
+                    </div>
+        </div>
+    </div>
+    <div id="previewBox"></div>
+    <div class = "inputBundle">
+    <div class="gridItem">
+        <button type="button" class="btn btn-success gridButton" onclick="isItPossible()">Is it possible?</button>
+        <h4 id = "answer" class = "answer"> Yes</h4>
+    </div>
+    <div class="gridItem">
+        <button type="button" class="btn btn-warning" onclick="findAllSolutions()">Find all solutions(slow)</button>
+    </div>
+    </div>
+    <div id="out"></div>
+
+</div>
 </body>
 
 <footer>
